# FarSSiBERT

./: LICENSE  MANIFEST.in  README.md  requirements.txt  setup.cfg
FarSSiBERT/: SSMeasurement.py  config.json  config.py  trainedTokenizer-vocab.txt
