[metadata]
name = FarSSiBERT
version = 0.0.1
author = Seyed Mojtaba Sadjadi
author_email = mojtaba.sadjadi@gmail.com
description = For measuring the semantic similarity of short texts on Persian social networks
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mojtabasajjadi
classifiers =
    Programming Language :: Python :: 3
    License :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True